# Tabu_VRPTW

./: CMakeLists.txt  README.md
data/: result.csv
output/: output_R101_customer number_100_Random seed_100.txt  output_R101_customer number_100_Random seed_101.txt  output_R101_customer number_100_Random seed_102.txt  output_R101_customer number_100_Random seed_103.txt  output_R101_customer number_100_Random seed_104.txt  output_R101_customer number_100_Random seed_105.txt  output_R101_customer number_100_Random seed_106.txt  output_R101_customer number_100_Random seed_110.txt  output_R101_customer number_100_Random seed_111.txt  output_R101_customer number_100_Random seed_112.txt  output_R101_customer number_100_Random seed_113.txt  output_R101_customer number_100_Random seed_114.txt  output_R101_customer number_100_Random seed_115.txt  output_R101_customer number_100_Random seed_116.txt  output_R101_customer number_100_Random seed_117.txt  output_R101_customer number_100_Random seed_123.txt  output_R101_customer number_100_Random seed_1234.txt  output_R101_customer number_100_Random seed_12345.txt  output_R101_customer number_25_Random seed_100.txt  output_R101_customer number_25_Random seed_101.txt  output_R101_customer number_25_Random seed_102.txt  output_R101_customer number_25_Random seed_103.txt  output_R101_customer number_25_Random seed_104.txt  output_R101_customer number_25_Random seed_105.txt  output_R101_customer number_25_Random seed_106.txt  output_R101_customer number_25_Random seed_123.txt  output_R101_customer number_25_Random seed_1234.txt  (+763 more)
(+7 files in other folders)
